bin_PROGRAMS = urpackager

# AM_CPPFLAGS = $(BOOST_CPPFLAGS) 

urpackager_SOURCES = urpackager.cpp DebianPackage.cpp DebianPackage.h PackageControl.cpp PackageControl.h PackageXML.cpp PackageXML.h
# urpackager_LDFLAGS = $(BOOST_LDFLAGS) $(BOOST_SYSTEM_LIB) $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_FILESYSTEM_LIB)

